--- a/src/Components/LocationEnterCart.module.css
+++ b/src/Components/LocationEnterCart.module.css
@@ -5,44 +5,49 @@
     left: -1px;
     width: calc(100% + 2px);
     min-height: 300px;
-    background-color: white;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+    background-color: var(--surface);
+    border: 1px solid var(--border-color);
+    border-radius: 0.75rem;
+    box-shadow: var(--shadow);
+    overflow: hidden;
 }
 
 .input {
     width: 100%;
-    height: 50px;
-    border-bottom: 1px lightgrey solid;
+    height: 56px;
+    border-bottom: 1px solid var(--border-color);
+    background-color: var(--surface-alt);
+    padding: 0 1rem;
 }
 
 .input > input {
-    border: none;
-    width: calc(100% - 20px);
+    width: 100%;
     height: 100%;
-    padding-left: 10px;
-    font-size: 14pt;
+    border: none;
+    background: transparent;
+    font-size: 1rem;
+    color: var(--text-primary);
 }
 
 .input > input:focus {
     outline: none;
 }
 
+.input > input::placeholder {
+    color: var(--text-secondary);
+}
+
 .suggestion {
     width: 100%;
-    height: 50px;
-
+    height: 60px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    padding: 0 1rem;
+    transition: all 0.15s ease;
 }
 
 .suggestion:hover {
-    background-color: lightgrey;
+    background-color: var(--surface-alt);
     cursor: pointer;
 }
 
@@ -50,46 +55,43 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    margin-left: 5px;
+    width: 40px;
+    height: 40px;
+    border-radius: 0.5rem;
+    background-color: var(--ctp-mocha-surface0);
+    color: var(--ctp-mocha-blue);
 }
 
 .address_info {
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    user-select: none;
-}
-
-.sub_text {
-    font-size: 10pt;
-    color: grey;
+    margin-left: 1rem;
     user-select: none;
 }
 
 .main_text {
-    font-size: 12pt;
-    font-weight: bold;
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: var(--text-primary);
+    margin-bottom: 0.25rem;
+}
+
+.sub_text {
+    font-size: 0.75rem;
+    color: var(--text-secondary);
 }
 
 .hint {
-    margin-top: 20px;
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    color: var(--text-secondary);
 }
 
 .hint div {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-bottom: 1rem;
+    opacity: 0.5;
 }
 
 .hint span {
-    color: grey;
-    font-size: 10pt;
-
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
+    font-size: 0.875rem;
 }
