--- a/src/Components/UI/Cart/DetailCart.module.css
+++ b/src/Components/UI/Cart/DetailCart.module.css
@@ -6,21 +6,14 @@
   align-items: center;
   justify-self: center;
   flex-direction: column;
-
-  border: 1px solid lightgrey;
-  border-radius: 20px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
-  padding: 10px 0px 20px 0;
+  border: 1px solid var(--border-color);
+  border-radius: 1rem;
+  box-shadow: var(--shadow);
+  padding: 1.5rem 0;
   box-sizing: border-box;
-  background-color: white;
-  overflow:hidden;
+  background-color: var(--surface);
+  overflow: hidden;
 }
-
-
 
 .item {
   width: 100%;
@@ -28,47 +21,51 @@
   align-items: center;
   justify-content: center;
   text-align: left;
-  font-size:18px;
-  line-height: 30px;
+  font-size: 0.875rem;
+  line-height: 1.75;
   text-transform: capitalize;
+  color: var(--text-secondary);
 }
 
 .item :first-child {
-  font-weight: bold;
-  margin-right: 5px;
+  font-weight: 600;
+  margin-right: 0.5rem;
   user-select: none;
+  color: var(--text-primary);
 }
 
 .itemValue {
-  margin-left: 10px;
+  margin-left: 0.5rem;
   cursor: pointer;
+  color: var(--ctp-mocha-blue);
+  text-decoration: none;
+}
+
+.itemValue:hover {
+  text-decoration: underline;
 }
 
 .title {
   text-align: center;
-  font-weight: bold;
+  font-weight: 600;
   user-select: none;
-  font-size:22px;
-  line-height: 40px;
-  margin-bottom: 10px;
+  font-size: 1.25rem;
+  line-height: 2;
+  color: var(--ctp-mocha-mauve);
 }
 
 .line {
-  height: 3px;
+  height: 1px;
   width: 90%;
-
-  background-color: lightgrey;
-
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  background-color: var(--border-color);
+  margin: 1rem auto;
 }
+
 .flightContent {
   width: 100%;
   height: 100px;
   box-sizing: border-box;
-  padding:0 40px;
+  padding: 0 2.5rem;
 }
 
 .flightRow {
@@ -82,105 +79,92 @@
   position: relative;
 }
 
-.plane::before {
+.plane::before,
+.plane::after {
   content: "";
   width: 120px;
-  height: 3px;
-  background: #efefef;
+  height: 2px;
+  background: var(--border-color);
   position: absolute;
   top: 45px;
+}
+
+.plane::before {
   left: -80px;
 }
 
 .plane::after {
-  content: "";
-  width: 120px;
-  height: 3px;
-  background-color: #efefef;
-  position: absolute;
-  top: 45px;
   right: -80px;
 }
 
-.fromCode{
-  width: 100px;
-  font-size: 50px;
-  color: #002c5f;
-  font-weight: 200;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  /* letter-spacing: 3px; */
-  
-    
-}
+.fromCode,
 .toCode {
   width: 100px;
-  font-size: 50px;
-  color: #002c5f;
-  font-weight: 200;
+  font-size: 2.5rem;
+  color: var(--ctp-mocha-blue);
+  font-weight: 300;
   display: flex;
-  
+}
+
+.fromCode {
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.toCode {
   flex-direction: row-reverse;
   justify-content: space-between;
   margin-left: auto;
-  margin-right: 0;
-  /* letter-spacing: 3px; */
-  
 }
 
 .fromCity,
 .toCity {
-  font-size: 18px;
-  color: #002c5f;
-  font-weight: 400;
+  font-size: 0.875rem;
+  color: var(--text-secondary);
+  font-weight: 500;
   display: block;
 }
 
 .flightFrom {
   text-align: left;
-  float: left;
 }
 
 .flightTo {
   text-align: right;
-  float: right;
 }
 
 .flightDetailRow {
-  margin-top:20px;
+  margin-top: 1.5rem;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-.flightOperator{
-    text-align:left;
-    float:left;
-
+.flightOperator {
+  text-align: left;
 }
 
-.flightNumber{
-    padding-left:65px;
+.flightNumber {
+  padding-left: 4rem;
 }
- .flightPrice{
-    float:right;
-    text-align:right;
 
- }
- .flightDetail{
-    margin-top:.2em;
-    color:#002C5F;
-    font-size:18px;
-    display: block;
- }
+.flightPrice {
+  text-align: right;
+}
 
- .flightTitle{
-    color:#6a8597;
-    font-size:16px;
-    letter-spacing: 3px;
-    display:block;
-    user-select:none;
+.flightDetail {
+  margin-top: 0.25rem;
+  color: var(--text-primary);
+  font-size: 1rem;
+  display: block;
+}
 
- }
+.flightTitle {
+  color: var(--text-secondary);
+  font-size: 0.75rem;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  display: block;
+  user-select: none;
+}
 
